Re: #1629 - tablet z-index fix

--- a/portal2/src/main/webapp/themes/default/css/common.css
+++ b/portal2/src/main/webapp/themes/default/css/common.css
@@ -168,8 +168,13 @@
 	max-width:						100%;
 	max-height:						100%;
 	
+}
+
+.overlaid-content.fullscreen,
+#lightbox_image{
 	overflow:						auto;
 	-webkit-overflow-scrolling':	touch;
+	
 }
 
 
